--- a/SpaceRogueRevolution/Views/Galaxy/Index.cshtml
+++ b/SpaceRogueRevolution/Views/Galaxy/Index.cshtml
@@ -31,6 +31,6 @@
 <div>
     @Html.ActionLink("N","Move","Galaxy")
      @Html.ActionLink("S","Move","Galaxy")
-     @Html.ActionLink("S","Move","Galaxy")
-     @Html.ActionLink("S","Move","Galaxy")
+     @Html.ActionLink("E","Move","Galaxy")
+     @Html.ActionLink("W","Move","Galaxy")
 </div>
