--- a/SpaceRogueRevolution/Content/Site.css
+++ b/SpaceRogueRevolution/Content/Site.css
@@ -64,9 +64,14 @@ textarea {
     height:20px;
     width:20px;
 }
+table { border-spacing: 0px;border-style:none;line-height:0;}
 .tile {
-    padding-left:0;
-    padding-right:0;
-    padding-top:0;
-    padding-bottom:0;
+    padding: 0px;
+    border: 0px;
+    vertical-align:bottom;
 }
+img {
+    display:grid;
+    border:0px;
+}
+
