--- a/SpaceRogueRevolution/Views/Galaxy/Index.cshtml
+++ b/SpaceRogueRevolution/Views/Galaxy/Index.cshtml
@@ -1,27 +1,28 @@
 ﻿@model SpaceRogueRevolution.Models.Galaxy
 
- @if(Model!=null)
-    {
+
 <table >
-    <tr>
-        <th></th>
-    </tr>
 <!-- Screen -->
    
         @for(int row =0;row<30;row++ ) {
         <tr>    
             @for(int col =0;col<30;col++ ){
             <td class="tile">
-               <a href="@Url.Action("Move",new SpaceRogueRevolution.Models.Coord {Row=row,Col=col})"><img src='@Url.Content("~/Content/Images/" + @Model.map[row,col].FileName)'  class="tileImage" /></a>
+               <a href="@Url.Action("Move",new SpaceRogueRevolution.Models.Coord {Row=row,Col=col})"><img src='@Url.Content("~/Content/Images/" + @Model.map[row,col].FileName)'  class="tileImage" title="@Model.map[row,col].Description" /></a>
              </td>
             }
         </tr>
         }
     </table>
-    }
-    else
-    {
-        <h1>No data present to display</h1>
-    }
+    <div id="DisplayText">
 
-
+    </div>
+  <script type="text/javascript">
+        window.onload = function () {
+            $('.tileImage').mouseover(function () {
+                if ($(this).attr('title') != "blank.png") {
+                    $('#DisplayText').text(($(this).attr('title')));
+                }
+            });
+        }
+    </script>
