--- a/SpaceRogueRevolution/Views/Home/Index.cshtml
+++ b/SpaceRogueRevolution/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     $(document).ready(function()
     {
         
-       // jQuery.ajaxSettings.traditional = true;
+        var gameData;
         var sendCommandToServer = function (command) {
             var commandObject = { ID: command };
             $.ajax({
@@ -23,43 +23,33 @@
                 data: JSON.stringify(commandObject),
                 contentType: 'application/json',
                 success: function (data) {
-
+                    gameData = data;
                     $("#message").text( data.playerSpaceShip.col + ":" + data.playerSpaceShip.row);
                     var ctx = document.getElementById('canvas').getContext('2d');
                     ctx.fillStyle = "rgba(0, 0, 56, 70)";
                     ctx.fillRect(0, 0, 500, 500);
                     var playerSpaceShipImage = new Image();
                     var playerSpaceShip = data.playerSpaceShip;
-                    
-                    //draw our spaceship
-                    playerSpaceShipImage.onload = function () {
-                        ctx.drawImage(playerSpaceShipImage, playerSpaceShip.col, playerSpaceShip.row, 20, 20);
-                    };
-                    playerSpaceShipImage.src = playerSpaceShip.FileName;
-
-                    //load the images
                     var images = [];
 
-                    // draw them 
                     var draw = function () {
-                        for (i = 0; i < data.map.length; i++) {
+                        for (i = 0; i < data.map.length-1; i++) {
                             var item = data.map[i];
-                            ctx.drawImage(images[i], item.row, item.col, 20, 20);
+                            ctx.drawImage(images[i], item.col, item.row, 20, 20);
                         };
                     };
 
                     var loadedImages = 0;
                     for (i = 0; i < data.map.length; i++) {
-                        // var ctx = document.getElementById('canvas-' + i).getContext('2d'),
                         var image = new Image();
                         var item = data.map[i];
-                        image.src = item.FileName;
-
-                        image.onload = function () {
+                        image.addEventListener("load", function () {
                             loadedImages++;
-                            if (loadedImages == data.map.length)
+                            if (loadedImages == data.map.length) {
                                 draw();
-                        };
+                            }
+                        }, false);
+                        image.src = item.FileName;
                         images.push(image);
                     }
                 }
@@ -68,16 +58,35 @@
 
         var doKeyDown = function (evt) {
             var command = new String();
-           // alert(evt.keyCode);
             sendCommandToServer(evt.keyCode);
+        };
 
-        }
+        var intersect = function (firstX, firstY, secondX, secondY)
+        {
+            //alert("clicked: " + firstX + ":" + firstY + "target:" + secondX + ":" + secondY);
+            if (firstX == secondX && firstY == secondY)
+                return true;
+
+            if ((Math.abs(firstX - secondX)  <=10) && (Math.abs(firstY - secondY)<=10))
+                return true;
+
+            return false;
+        };
 
         var action = "";
         window.addEventListener('keydown', doKeyDown, true);
         $("#canvas").mousedown(function (e) {
             var fixedX = e.clientX - 8;
             var fixedY = e.clientY - 9;
+            //determine any intersections
+            for(var i=0;i<gameData.map.length;i++)
+            {
+                if (intersect(gameData.map[i].col, gameData.map[i].row, fixedX, fixedY)) {
+                    alert(gameData.map[i].Description);
+                }
+            }
+           
+            
             $("#message").text("clicked: " + fixedX + ":" + fixedY);
         });
         sendCommandToServer(action);
