--- a/SpaceRogueRevolution/Views/Home/Index.cshtml
+++ b/SpaceRogueRevolution/Views/Home/Index.cshtml
@@ -11,6 +11,19 @@
 </div>
 <div id ="message" style="position:absolute;top:420px;left:0px" ></div>
 <div id ="display" style="position:absolute;top:450px;left:0px" ></div>
+<div id ="menu" style="position:absolute;top:0px;left:500px" >
+    <ul>
+          <li>
+              <input type="button" value="About" onclick="$('#AboutDiv').show(1000);" />
+          </li>
+          <li>
+              <input type="button" value="How to Play" onclick="$('#HowToPlayDiv').show(1000);" />
+          </li>
+          <li>
+              <input type="button" value="Bugs" onclick="$('#BugsDiv').show(1000);" />
+          </li>
+    </ul>
+</div>
 <div id ="serverprocessingdisplay" style="position:absolute;top:150px;left:0px;z-index:10;background-color:red;font-size:18pt" >Contacting Server...</div>
 
 <div id="dialog" style="position:absolute;top:0px;left:0px;z-index:5;background-color:grey;color:white;height:500px;width:500px">
@@ -21,6 +34,25 @@
     </div>
     <div style="position:absolute;vertical-align:bottom">
         <input type="button" value="Continue" onclick="$('#dialog').hide(1000);" />
+    </div> 
+</div>
+<div id="AboutDiv" style="position:absolute;top:100px;left:500px;background-color:green;color:white;height:500px;width:500px">
+    <div>
+          <p>Space Rogue Revolution - Episode 1 : The Big Jobs. This is the first installment of a roguelike space adventure game. This is
+              the first 1GAM entry
+          </p>
+    </div>
+    <div style="position:absolute;vertical-align:bottom">
+        <input type="button" value="X" onclick="$('#AboutDiv').hide(1000);" />
+    </div> 
+</div>
+<div id="HowToPlayDiv" style="position:absolute;top:100px;left:500px;background-color:green;color:white;height:500px;width:500px">
+    <div>
+          <p>How to Play...
+          </p>
+    </div>
+    <div style="position:absolute;vertical-align:bottom">
+        <input type="button" value="X" onclick="$('#HowToPlayDiv').hide(1000);" />
     </div> 
 </div>
 
@@ -34,7 +66,11 @@
         var gameData;
         var jobs;
         var docked = false;
-        var cash = 0;       
+        var cash = 0;
+
+        $('#AboutDiv').hide();
+        $('#HowToPlayDiv').hide();
+        $('#BugsDiv').hide();
 
         var drawScreen = function () {
             var loadedImages = 0;
@@ -130,22 +166,22 @@
         };
 
         var getKeyBoardAction = function (evt) {
-            var playerSpaceShip = gameData[0];
+            var playerSpaceShip = gameData[10];
             switch (evt.keyCode) {
                 case 65:
-                    if (playerSpaceShip.col - 5)
+                    if (playerSpaceShip.col - 5 >=0)
                         gameData[10].col -= 5;
                     break;
                 case 87:
-                    if (playerSpaceShip.row - 5)
+                    if (playerSpaceShip.row - 5 >= 0)
                         gameData[10].row -= 5;
                     break;
                 case 83:
-                    if (playerSpaceShip.col + 5 < 400)
+                    if (playerSpaceShip.col + 5 < 500)
                         gameData[10].col += 5;
                     break;
                 case 90:
-                    if (playerSpaceShip.row + 5 < 400)
+                    if (playerSpaceShip.row + 5 < 500)
                         gameData[10].row += 5;
                     break;
                 case 48: case 49: case 50: case 51: case 52: case 53: case 54: case 55: case 56: case 57:
